[gd_scene load_steps=6 format=2]

[ext_resource path="res://Camera2D.gd" type="Script" id=1]
[ext_resource path="res://UITheme.tres" type="Theme" id=2]
[ext_resource path="res://UI.gd" type="Script" id=3]
[ext_resource path="res://Synapse.gd" type="Script" id=4]
[ext_resource path="res://LoadButton.gd" type="Script" id=5]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )
_synapse_path = NodePath("../Synapse")

[node name="FileMenu" type="HBoxContainer" parent="UI"]
anchor_right = 1.0
mouse_filter = 2
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="UI/FileMenu"]
margin_left = 367.0
margin_right = 494.0
margin_bottom = 38.0
text = "See script"
script = ExtResource( 5 )

[node name="ToClipButton" type="Button" parent="UI/FileMenu"]
margin_left = 498.0
margin_right = 656.0
margin_bottom = 38.0
text = "To clipboard"

[node name="Synapse" type="Node2D" parent="."]
script = ExtResource( 4 )
ring_color_brightest = Color( 0.694118, 0.792157, 1, 1 )
[connection signal="load_data" from="UI" to="Synapse" method="_on_UI_load_data"]
[connection signal="pressed" from="UI/FileMenu/LoadButton" to="UI" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="UI/FileMenu/ToClipButton" to="UI" method="_on_ToClipButton_pressed"]
